# OnlineStore

./: .editorconfig  .gitignore  404.html.br  Company.Website.styles.css  Company.Website.styles.css.br  README.md  index.html  index.html.br  manifest.json.br  service-worker-assets.js  service-worker-assets.js.br  service-worker.js  service-worker.js.br
.github/: CODEOWNERS
_framework/: Blazored.SessionStorage.dll.br  Company.Website.Components.dll.br  Company.Website.dll.br  Microsoft.AspNetCore.Components.Forms.dll.br  Microsoft.AspNetCore.Components.Web.dll.br  Microsoft.Extensions.DependencyInjection.Abstractions.dll.br  Microsoft.Extensions.Options.dll.br  Serilog.Sinks.BrowserConsole.dll.br  System.Collections.Concurrent.dll.br  System.Collections.Immutable.dll.br  System.Collections.dll.br  System.ComponentModel.Annotations.dll.br  System.ComponentModel.Primitives.dll.br  System.ComponentModel.TypeConverter.dll.br  System.ComponentModel.dll.br  System.Drawing.Primitives.dll.br  System.Linq.Expressions.dll.br  System.Linq.Queryable.dll.br  System.Linq.dll.br  System.ObjectModel.dll.br  System.Private.CoreLib.dll.br  System.Private.Runtime.InteropServices.JavaScript.dll.br  System.Runtime.Serialization.Primitives.dll.br  System.Text.Json.dll.br  System.Text.RegularExpressions.dll.br  blazor.boot.json  blazor.boot.json.br
src/Chat/rockpal-chat/: Cargo.toml
src/Chat/rockpal-chat/src/: Settings.toml  main.rs  settings.rs
src/Chat/rockpal-chat/src/settings/: Settings.docker.toml  Settings.toml  settings.rs
src/Chat/rockpal-chat/src/websocket/: server.rs
(+359 files in other folders)
